# hello-world

./: .gitignore  CMakeLists.txt  Makefile  README.md  hello-world.ps1  hello-world.py  hello-world.sh  package-lock.json  package.json  pyproject.toml  run.sh  server.js
code/: HELLO.ERB  hello.asm  hello.c  hello.cpp  hello.cs  hello.dart  hello.f90  hello.go  hello.hs  hello.java  hello.js  hello.kt  hello.kts  hello.m  hello.matlab  hello.mk  hello.ml  hello.pas  hello.php  hello.pl  hello.py  hello.r  hello.rb  hello.rs  hello.scala  hello.scm  hello.sh  hello.sql  hello.ts  hello.vb
i18n/: de-de.txt  en-us.txt  es-es.txt  fr-fr.txt  it-it.txt  ja-jp.txt  zh-cn.txt
public/: index.html  script.js  style.css
